--- a/1 Application Design and Build/3 Understand Jobs and CronJobs/scheduled.yml
+++ b/1 Application Design and Build/3 Understand Jobs and CronJobs/scheduled.yml
@@ -3,11 +3,12 @@ kind: CronJob
 metadata:
   name: ckad-cron1
 spec:
-  schedule: "* * * * *"
+  schedule: "*/2 * * * *"
   startingDeadlineSeconds: 30
   concurrencyPolicy: Allow
   successfulJobsHistoryLimit: 5
   failedJobsHistoryLimit: 2
+  concurrencyPolicy: Forbid
   jobTemplate:
     spec:
       template: 
