--- a/1 Application Design and Build/4 Understand Multi-container Pod Design Patterns/db-deploy.yml
+++ b/1 Application Design and Build/4 Understand Multi-container Pod Design Patterns/db-deploy.yml
@@ -15,10 +15,13 @@ spec:
     spec:
       containers:
         - name: db
-          image: postgres
+          image: postgres:9.6.5
           envFrom:
             - configMapRef:
                 name: db-access
           ports:
             - containerPort: 5432
-
+        - name: db-admin
+          image: adminer
+          ports:
+            - containerPort: 8080
