--- a/1 Application Design and Build/4 Understand Multi-container Pod Design Patterns/be-deploy.yml
+++ b/1 Application Design and Build/4 Understand Multi-container Pod Design Patterns/be-deploy.yml
@@ -13,6 +13,12 @@ spec:
       labels:
         app: backend
     spec:
+      initContainers:
+        - name: check-db
+          image: postgres:9.6.5
+          command: ['sh', '-c', 
+  'until pg_isready -h postgres -p 5432; 
+  do echo waiting for database; sleep 2; done;']  
       containers:
         - name: backend
           env:
@@ -31,3 +37,7 @@ spec:
           ports:
             - name: api
               containerPort: 8000
+                #- name: db-admin
+                #image: adminer
+                #ports:
+                #- containerPort: 8080       
